--- a/_i18n/en/_posts/2020-11-19-「開門」造車-你行你來.md
+++ b/_i18n/en/_posts/2020-11-19-「開門」造車-你行你來.md
@@ -1,25 +1,24 @@
 ---
   layout: "post"
-  title: "Shang Zhou Column: \"Open the door\" to build a car, you do it, you do it"
-  excerpt: "Starting this year, we will not only deepen youth participation in existing mechanisms, but also create new channels."
+  title: "Policymaking behind “open doors”"
+  excerpt: "Starting this year, in addition to further deepening youth participation in the existing mechanisms, we have also created brand new channels."
   image: "/assets/imgs/d5d6ec92cdd56518e92a8671c7474c5774b15ad8.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "青年參與"
+    - "Youth Engagement"
 ---
 
+🌏 During the Asia-Pacific Economic Cooperation (APEC) Economic Leaders Conference in mid-November, I was invited to talk in the "CEO Dialogues". In my talk titled "Open Response & Open Recovery", I explained how Taiwan could improve its economic resilience and accelerate its recovery after the pandemic.
 
-🌏 During the Asia-Pacific Economic Cooperation (APEC) Economic Leaders Conference in mid-November, I was invited to "Open Response & Open Recovery" in the "CEO Dialogues" (CEO Dialogues). Recovery) is the topic, explaining how Taiwan can improve its economic resilience and accelerate its recovery after the epidemic. 
+🔢 In order to counter the pandemic, we promoted many social innovations through collaboration between the public and private sectors and open access to data. In addition to sharing these experiences with the world, we are also continuing to explore the ways to improve these practices.
 
-🔢 During the epidemic, we promoted many social innovations through public-private collaboration and open information. In addition to sharing these experiences to the world, we are also continuing to explore how to improve these practices. 
+🌱 Over the years, I have met many young people all over Taiwan. They have unique observations and astute perceptions about various social issues. They also have a social mission to actively promote various changes. Starting this year, in addition to further deepening youth participation in the existing mechanisms, we have also created brand new channels, which allowed me to see new possibilities.
 
-🌱 Over the years, I have met many young friends all over Taiwan. Everyone has unique observations and delicate feelings about various social issues. They also have a social mission to actively promote various changes. Starting this year, in addition to the existing mechanisms, we continued to deepen youth participation, and at the same time created brand new channels, which allowed me to see new possibilities. 
+🗣️ For example, [Let's Talk](https://www.youthhub.tw/), formerly a policy forum, has been transformed into a dialogue platform between youth and the government in recent years. It has become one of the commitments of Taiwan’s participation in the "Open Government Partnership (OGP)", which has 79 member countries. Starting this year, for the first time, it has been opened to youth participation from beginning to end. For example, for the agenda selection at the beginning of the project, more than 4,000 young people were interviewed through surveys to establish the annual discussion themes of "urban and rural education resource gap" and "reasonable working conditions and rights". The project was only initiated after that. This can be considered a a pioneering step in government planning, as a departure from the past approach of government-led agenda selection.
 
-🗣️ For example, [Let's Talk](https://www.youthhub.tw), formerly a policy forum, has begun to transform into a dialogue platform between youth and government in recent years, and has become a member of the 79 countries that taiwan has joined one of the commitments of the "open government partnership alliance (ogp)". From the beginning of this year, for the first time, youth participation has been opened to the end. For example, from the beginning of the project, more than 4,000 young friends were interviewed through surveys to establish the "urban and rural education resource gap" and "reasonable working conditions and rights" as annual discussions The theme, then started, is different from the previous government-led and set-up issues, which can be called a pioneering work in government plans. 
+🐱 In addition to policy discussions, the digital thought process of youth is also the key to industrial development. Affected by the pandemic, work and life around the world are highly dependent on the Internet, and digital transformation has become the most urgent need of many companies. In response, the ["Training x Transformation" project](https://3t.org.tw/) recruits young people who are interested in the four fields of intelligent services, digital marketing, intelligent manufacturing, and artificial intelligence to implement a six-month enterprise digital transformation program. Thus far, there are 26 participating domestic and international enterprises, in fields spanning from technology to traditional industries. In the process, in addition to collaborating with professionals in various fields and discussing development directions, the young people could actually understand existing problems within the company, and then propose specific corporate digital transformation suggestions.
 
-🐱 In addition to policy discussions, the digital thinking of young friends is also the key to industrial development. Affected by the epidemic, the work and life of the world are highly dependent on the Internet, and digital transformation has become the most urgent need of many companies. In this regard, ["T Ambassador" Project](https://3t.org.tw/) recruited young friends who are interested in the four fields of smart services, digital marketing, smart manufacturing, and artificial intelligence for a half-year The implementation of the enterprise digital transformation program currently involves 26 cross-funded and foreign companies, from technology to transfer of production. In the process, apart from collaborating with professionals in various fields and discussing the direction of development, you can actually enter the company, understand existing problems, and then propose specific corporate digital transformation suggestions. 
+🎓 This approach is quite similar to the "Rescue Action by Youth .gov Project" ([RAY Project](https://ray.pdis.nat.gov.tw)). RAY is a collaboration between my office and the National Development Council. For two months during the summer vacation, 30 students with different backgrounds including service design, interface design, visual design, and information engineering were invited to collaborate with government officials to improve the user experiences of government websites. Participating agencies include Keelung City Government, the Youth Development Administration of the Ministry of Education, and the TaiwanJobs website of the Ministry of Labor.
 
-🎓 This approach is similar to the "Young Student Medical Examination Government Website Digital Service Trainee Program" ([RAY Project](https://ray.pdis.nat.gov.tw)). RAY is a collaboration between my office and the National Development Council. During the summer vacation, 30 students with different backgrounds including service design, interface design, visual design, information engineering, etc. are invited to collaborate with government officials to improve the use of government websites. Participating agencies include Keelung City Government, the Youth Department of the Ministry of Education, and the Taiwan Employment Service of the Ministry of Labor. 
-
-🌐 Let young friends directly take action and become a booster for the transformation of the government and enterprises-in my opinion, this is the spirit of "open the door and build a car, you do it." 
+🌐 Letting young people directly take action and become an aid to the transformation of governments and enterprises, in my opinion, is the spirit of policymaking behind “open doors” — you can join if you are capable.
