--- a/_i18n/en/_posts/project/2020-11-17-ray2020.md
+++ b/_i18n/en/_posts/project/2020-11-17-ray2020.md
@@ -120,3 +120,5 @@ We also see that many students have great collaborations Room for improvement. F
 Along the way...
 
 PDIS is very happy to be able to share this unforgettable journey with the students. During the two-month solid internship, the students gave full play, learned by doing, and proved their hypotheses with practical actions. Everyone&#39;s dedication and hard work has provided the greatest space for themselves and this project. And this is not enough. The most important thing is that design is not a heavy burden. Design should be a fusion of passion and professionalism with a bit of playfulness, to seriously understand the needs or challenges of users. In addition to rationality, I still maintain some sensibility and use creativity to think about every aspect. &quot;Let&#39;s have fun!&quot; is a very important principle we give to Ray 4.0 students. I am also very happy to be able to confirm with you, [&quot;User experience design can be a very happy thing!&quot;](https://medium.com/@hsuanchiwong/%e5%9c%a8%e5%85%ac %e9%83%a8%e9%96%80%e7%9a%84ux%e4%b9%8b%e6%97%85-ray4-0%e8%a6%8b%e7%bf%92%e5%88 %86%e4%ba%ab-8e70b3a49827)
+
+<video src="/assets/videos/intern_libx264_profile-main_level-3.1_preset-medium_crf-28_570x360.mp4" autoplay="autoplay" playsinline="" muted="muted" loop="loop" width="100%" style="margin-top: 2em;"></video>
