Auto archive image
Archive and Modify follow file:
"_i18n/en/_posts/2020-10-06-\344\275\240\350\242\253\343\200\214\345\211\265\346\226\260\343\200\215\344\272\206\345\227\216\357\274\237\344\270\200\350\266\237\351\233\231\345\220\221\345\205\261\345\255\270\347\232\204\345\257\246\350\270\220\344\271\213\346\227\205.md"
_i18n/en/_posts/project/2020-11-17-ray2020.md
"_i18n/zh-TW/_posts/2020-10-06-\344\275\240\350\242\253\343\200\214\345\211\265\346\226\260\343\200\215\344\272\206\345\227\216\357\274\237\344\270\200\350\266\237\351\233\231\345\220\221\345\205\261\345\255\270\347\232\204\345\257\246\350\270\220\344\271\213\346\227\205.md"
_i18n/zh-TW/_posts/project/2020-11-17-ray2020.md
"_posts/2020-10-06-\344\275\240\350\242\253\343\200\214\345\211\265\346\226\260\343\200\215\344\272\206\345\227\216\357\274\237\344\270\200\350\266\237\351\233\231\345\220\221\345\205\261\345\255\270\347\232\204\345\257\246\350\270\220\344\271\213\346\227\205.md"
_posts/project/2020-11-17-ray2020.md
assets/imgs/183651b723ccea927f9451c1134d7b7e1d005969.jpeg
assets/imgs/2753ee3f62cbd8d28498d30fda4edc5749be5df1.jpeg
assets/imgs/339d6e4106c9a3640b31ec235b2745f534422872.jpeg
assets/imgs/3ee503bccb19e7af601571bee893d24ce7c28633.jpeg
assets/imgs/8db18259e977bd3d89f8bc05d45d30b28498bec4.jpeg
assets/imgs/d77f13f12de847884f697031b46c9709293053fb.jpeg
assets/imgs/fa6117d5a400c457237c5aa878bdf60e19172b76.jpeg

--- a/_i18n/en/_posts/2020-10-06-你被「創新」了嗎？一趟雙向共學的實踐之旅.md
+++ b/_i18n/en/_posts/2020-10-06-你被「創新」了嗎？一趟雙向共學的實踐之旅.md
@@ -2,7 +2,7 @@
   layout: "post"
   title: "Have you been \"innovated\"? A practical journey of mutual learning"
   excerpt: "Why do so many ministries come to PDIS to organize \"open government training courses\"? What is special about these courses?"
-  image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/5/5ac6adaa13bdd5cfb10ba8ce44c2a6e59b8df5b0.jpeg"
+  image: "/assets/imgs/5ac6adaa13bdd5cfb10ba8ce44c2a6e59b8df5b0.jpeg"
   author: "許恩恩"
   category: "blog"
   tags: 
@@ -42,7 +42,7 @@ During the course preparation process, the three POs of the original club not on
 
 
 <figure> 
-<img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/f/fa6117d5a400c457237c5aa878bdf60e19172b76.jpeg"> 
+<img src="/assets/imgs/fa6117d5a400c457237c5aa878bdf60e19172b76.jpeg"> 
 <figcaption> Open government training courses related photos</figcaption> 
 </figure> 
 
