--- a/_i18n/en/_posts/project/2020-11-17-ray2020.md
+++ b/_i18n/en/_posts/project/2020-11-17-ray2020.md
@@ -2,7 +2,7 @@
   layout: "project"
   title: "Roll up your sleeves to transform the \"people-oriented\" government digital services"
   excerpt: "Introduction to the government website plan for the physical examination of young students: Let’s take a look at how young students can use design thinking in the two months of summer vacation to design and reform government digital services in collaboration with agencies!"
-  image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/c/c95d8068ec4526c775b88ada7d20771249a1e18c.jpeg"
+  image: "/assets/imgs/c95d8068ec4526c775b88ada7d20771249a1e18c.jpeg"
   author: "張皓婷"
   category: "project"
   tags: 
@@ -40,7 +40,7 @@ In the four-day collaborative workshop, we arranged for students to share the re
 The students and the agency observe the real challenges and needs of the agency through practice and back-and-forth discussions. A series of collaboration and sharing have allowed the agency and students to build a bridge of collaboration. In the next two months, they can explore the core issues of agency services in more depth. 
 
 <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/2/2753ee3f62cbd8d28498d30fda4edc5749be5df1.jpeg"> 
+ <img src="/assets/imgs/2753ee3f62cbd8d28498d30fda4edc5749be5df1.jpeg"> 
 <figcaption> The students prepared carefully, did not miss every opportunity for communication in the workshop, and built a bridge for follow-up collaboration.</figcaption> 
 </figure> 
 
@@ -50,7 +50,7 @@ The students and the agency observe the real challenges and needs of the agency 
 At Ray 3.0, we used design thinking to plan the progress of the project. At 4.0 this year, we made some adjustments and achieved the following six steps, so that students can have a basic process and progress for reference during the two months of internship. (We call it [Six Steps for short](https://docs.google.com/document/d/1fp64dgtwtaagwaomnj67fhifgqrek1l4d6c2vtyz4ju/edit#).) In the first divergence and convergence process of design thinking, we encourage students to define this transformation After the three core problems of the service, a second divergent drawing of different drafts is carried out, and a design solution that meets the needs of users is found through more than two test iterations. 
 
 <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/3ee503bccb19e7af601571bee893d24ce7c28633.jpeg"> 
+ <img src="/assets/imgs/3ee503bccb19e7af601571bee893d24ce7c28633.jpeg"> 
 </figure> 
 
 
@@ -61,7 +61,7 @@ We hope that students can produce wireframes in two different directions, one is
 *IDEO uses [analogous inspiration](https://www.designkit.org/methods/analogous-inspiration) research methods to allow designers to use their creativity flexibly, and more importantly, creative thinking often Turbulence from different fields. If you always look at a design project in the same way and perspective, the solution often cannot escape the known range. 
 
 <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/339d6e4106c9a3640b31ec235b2745f534422872.jpeg"> 
+ <img src="/assets/imgs/339d6e4106c9a3640b31ec235b2745f534422872.jpeg"> 
 </figure> 
 
 
@@ -78,14 +78,14 @@ https://ray.pdis.nat.gov.tw/
 Six steps to kill is actually the lowest solution range. On the first day, we encourage all students to use their learning and creativity to take the output further. Every two weeks of the meeting, we also plan a lot of links so that students can share the research methods or learning in this period. &quot;Seeing other groups using certain methods to do user research, we will next Try it again.” “This group of presentations is too clear to share and organize, and we can refer to it!” We often hear that students have more excitement because each group tries different modes. In fact, this atmosphere of mutual observation has also indirectly cultivated an environment of benign competition. When everyone sees the output and sharing of other groups, they will invisibly hope that they will work harder. 
 
 <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/8/8db18259e977bd3d89f8bc05d45d30b28498bec4.jpeg"> 
+ <img src="/assets/imgs/8db18259e977bd3d89f8bc05d45d30b28498bec4.jpeg"> 
 <figcaption> In addition to the interactive prototype in the specification for operation, the students thoughtfully prepared additional situational cards to allow testers to quickly enter the service.</figcaption> 
 </figure> 
 
 The composition of the group is also as diverse as possible. The members of each group come from design research, information, service design, UX or UI. Through the excitement of different backgrounds, the discussion can be more diverse, and it is hoped that the service can be considered more comprehensively. How to communicate and cooperate with people of different backgrounds is also a very important learning in this internship. &quot;How to communicate in a language and way that can understand each other, so that groups can exchange ideas smoothly and come up with concepts that everyone can go all out. &quot;This important skill will be very useful no matter what field the students are engaged in in the future. 
 
 <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/1/183651b723ccea927f9451c1134d7b7e1d005969.jpeg"> 
+ <img src="/assets/imgs/183651b723ccea927f9451c1134d7b7e1d005969.jpeg"> 
 <figcaption> Delicious dim sum is a must for every Ray meeting. The hard-working classmates produced solutions to further solve the core problem under the consolation (temptation) of the food.</figcaption> 
 </figure> 
 
@@ -98,7 +98,7 @@ The students responsible for the revision of the website of the Bureau of Labor 
 Another group of students who were responsible for the redesign of the registration system of the United Hospital, although they received a negative reply from the agency staff that they did not intend to revise it. However, throughout the internship process, various methods have been used to keep the agency staff more involved. Even in the collaborative workshop, many small tools were designed to attack the needs of the organs. Their indomitable spirit allowed them to learn a lot of &quot;how to adjust themselves to various challenges&quot; in the process. On the road of future design, I believe that everyone will encounter many problems and challenges. How to use experience and tools to help communication and resolve the problems that follow will be an important key to &quot;good design.&quot; 
 
 <figure> 
- <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/d/d77f13f12de847884f697031b46c9709293053fb.jpeg"> 
+ <img src="/assets/imgs/d77f13f12de847884f697031b46c9709293053fb.jpeg"> 
 <figcaption> After repeated tests and discussions, the students were able to confidently put forward their opinions and summarize the feedback from users into design solutions to the challenges.</figcaption> 
 </figure> 
 
