--- a/_i18n/zh-TW/_posts/2020-10-06-你被「創新」了嗎？一趟雙向共學的實踐之旅.md
+++ b/_i18n/zh-TW/_posts/2020-10-06-你被「創新」了嗎？一趟雙向共學的實踐之旅.md
@@ -2,7 +2,7 @@
 layout: post
 title: 你被「創新」了嗎？一趟雙向共學的實踐之旅
 excerpt: 為什麼這麼多部會都來找PDIS辦「開放政府培訓課程」？這些課程又有什麼特別之處呢？
-image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/5/5ac6adaa13bdd5cfb10ba8ce44c2a6e59b8df5b0.jpeg
+image: /assets/imgs/5ac6adaa13bdd5cfb10ba8ce44c2a6e59b8df5b0.jpeg
 author: 許恩恩
 category: blog
 tags:
@@ -41,7 +41,7 @@ tags:
 
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/f/fa6117d5a400c457237c5aa878bdf60e19172b76.jpeg">
+  <img src="/assets/imgs/fa6117d5a400c457237c5aa878bdf60e19172b76.jpeg">
   <figcaption>開放政府培訓課程相關照片</figcaption>
 </figure>
 
