--- a/_posts/project/2020-11-17-ray2020.md
+++ b/_posts/project/2020-11-17-ray2020.md
@@ -2,7 +2,7 @@
 layout: project
 title: 捲起袖子一起來改造 「以人為本」的政府數位服務
 excerpt: 青年學生體檢政府網站計畫介紹：一起來看看，青年學子們如何在暑假的兩個月中，運用設計思考來與機關協作設計改造政府的數位服務吧！
-image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/c/c95d8068ec4526c775b88ada7d20771249a1e18c.jpeg
+image: /assets/imgs/c95d8068ec4526c775b88ada7d20771249a1e18c.jpeg
 author: 張皓婷
 category: project
 tags: [青年參與,開放政府,設計思考,Ray,暑期實習,政府數位服務改造,公私協力,使用者經驗,服務設計,跨領域合作]
@@ -29,7 +29,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
 同學們與機關透過實作與來回討論，從做中觀察機關的真正挑戰及需求。一連串的協作與分享，讓機關與同學們搭建起協作橋樑，在接下來的兩個月中，能更深入的探求機關服務的核心問題。
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/2/2753ee3f62cbd8d28498d30fda4edc5749be5df1.jpeg">
+  <img src="/assets/imgs/2753ee3f62cbd8d28498d30fda4edc5749be5df1.jpeg">
   <figcaption>同學們用心準備，不錯過工作坊裡每一個溝通的機會，搭建起後續協作的橋樑。</figcaption>
 </figure>
 
@@ -39,7 +39,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
 在Ray 3.0時，我們運用了設計思考的方式計畫了專案的進程。在今年4.0時我們稍作調整，成就了以下六個步驟，讓同學們在實習的這兩個月中能有一個基本的流程與進度可以參考。（我們簡稱為[六步殺](https://docs.google.com/document/d/1FP64DgtwTAAgWaOMNj67FhIFgqrEk1L4D6C2VTyZ4JU/edit#)。) 在設計思考的第一次發散收斂過程中，我們鼓勵同學定義本次改造服務的三個核心問題後，再進行第二次的發散繪製不同的草稿，並透過兩次以上的測試迭代去找出符合使用者需求的設計解法。
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/3ee503bccb19e7af601571bee893d24ce7c28633.jpeg">
+  <img src="/assets/imgs/3ee503bccb19e7af601571bee893d24ce7c28633.jpeg">
 </figure>
 
 
@@ -50,7 +50,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
 *IDEO 運用 [analogous inspiration](https://www.designkit.org/methods/analogous-inspiration) 研究方法讓設計師們可以靈活運用他們的創造力，更重要的是，創新思維常來自於不同領域的激盪。若總是以同樣的方式與角度看待一個設計專案，解法常常無法跳脫已知範圍。
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/339d6e4106c9a3640b31ec235b2745f534422872.jpeg">
+  <img src="/assets/imgs/339d6e4106c9a3640b31ec235b2745f534422872.jpeg">
 </figure>
 
 
@@ -67,14 +67,14 @@ https://ray.pdis.nat.gov.tw/
 六步殺所規範的是其實是最低求解範圍，我們在第一天就鼓勵所有同學可以發揮自己的所學與創意，將產出更推進一步。每兩個禮拜的見面會，我們也規劃了很多環節，來讓同學們可以針對這個時期的研究方法或學習有分享的機會，「看到別組運用某某方法來做使用者研究，我們下次也來試試。」「這組的簡報分享及整理實在太清楚了，我們可以參考！」我們常常都會聽到同學們因為每組嘗試不同的模式而有更多的激盪。其實，這個互相觀摩的氛圍，也間接培養了一個良性競爭的環境。當每個人看到別組有這麼用心的產出及分享，無形之中也會希望自己再多努力一些。
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/8/8db18259e977bd3d89f8bc05d45d30b28498bec4.jpeg">
+  <img src="/assets/imgs/8db18259e977bd3d89f8bc05d45d30b28498bec4.jpeg">
   <figcaption>除了規範中的互動原型供操作外，同學們貼心的額外準備情境小卡來讓測試者快速進入服務。</figcaption>
 </figure>
 
 小組的組成我們也希望能盡量保持多元，每一組的成員來自設計研究、資訊、服務設計、UX或是UI。透過不同背景的激盪，能夠讓討論更多元，也希望因此能夠將服務考慮得更周全。如何與不同背景的人溝通合作，也是這次實習中很重要的學習，「怎麼樣用彼此都能了解的語言及方式溝通，讓小組間能順利交換想法並想出大家都能全力以赴的概念。」這個重要的技能，無論未來同學們從事什麼領域的工作，都會非常受用。
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/1/183651b723ccea927f9451c1134d7b7e1d005969.jpeg">
+  <img src="/assets/imgs/183651b723ccea927f9451c1134d7b7e1d005969.jpeg">
   <figcaption>好吃的點心是每次Ray見面會的必備，辛勞的同學在美食的慰勞（誘惑）下，產出更進一步解決核心問題的解法。</figcaption>
 </figure>
 
@@ -87,7 +87,7 @@ https://ray.pdis.nat.gov.tw/
 另一組負責聯合醫院掛號系統重新設計的同學們，雖然在一開始就得到機關人員不打算改版的消極答覆。但在整個實習過程中，不斷用各種方法讓機關人員更參與其中。甚至在協作工作坊中，設計了許多小工具來旁敲側擊機關的需求，他們不屈不撓的精神，讓他們在過程中，學習了很多「如何調整自己因應各種挑戰」的方式。在未來的設計之路上，相信大家也會遇到許多問題及挑戰，如何應用經驗與工具來協助溝通、化解接踵而來的問題，將會是做「好設計」的重要關鍵。
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/d/d77f13f12de847884f697031b46c9709293053fb.jpeg">
+  <img src="/assets/imgs/d77f13f12de847884f697031b46c9709293053fb.jpeg">
   <figcaption>經過一次次的測試及討論的磨練，同學們能夠自信的提出他們的觀點，將使用者的回饋歸納成解決挑戰的設計解法。</figcaption>
 </figure>
 
