* try a tooltip with text contributions from rms

--- a/_i18n/en/_posts/2020-10-01-千年暗室-一燈即明.md
+++ b/_i18n/en/_posts/2020-10-01-千年暗室-一燈即明.md
@@ -33,7 +33,7 @@ Fortunately, experts at the CECC with extensive prior experience with HIV positi
 
 As a result, businesses developed creative approaches such as leaving code names, single-use emails and prepaid mobile phone numbers, or providing hats with plastic shields to maintain social distancing. When even nightclubs could join the fight, the prevention effort garnered even more social trustworthiness.
 
-The pandemic has also brought severe challenges to national governance. Countries have adopted isolation measures such as national or city-wide lockdowns, school suspensions, and business closures — turning many countries and cities into lonely islands à la *Lord of the Flies* . Being isolated from the world brings pressure: although leaders may have been elected through democratic processes, democracy is still rooted in competition between parties, giving rise to escalating opposition and conflict: every person sees a "beast" projected from their mind. Unquestionably, the easiest casualties are science and reason – thus, as *Lord of the Flies* describes: "They walked along, two continents of experience and feeling, unable to communicate." As the pandemic spreads, these dramas continue to play out.
+The pandemic has also brought severe challenges to national governance. Countries have adopted isolation measures such as national or city-wide lockdowns, school suspensions, and business closures — turning many countries and cities into lonely islands à la <strong class="tooltipped" data-tooltip="rms notes: The Lord of the Flies is ugly, but the reality — in the case I know about — is much better. A real group of 6 boys got shipwrecked on a deserted island. They cooperated and took good care of each other for over a year, until someone rescued them. Isn't that nice?">Lord of the Flies</strong>. Being isolated from the world brings pressure: although leaders may have been elected through democratic processes, democracy is still rooted in competition between parties, giving rise to escalating opposition and conflict: every person sees a "beast" projected from their mind. Unquestionably, the easiest casualties are science and reason – thus, as *Lord of the Flies* describes: "They walked along, two continents of experience and feeling, unable to communicate." As the pandemic spreads, these dramas continue to play out.
 
 Despite not imposing citywide lockdown measures, Taiwan still cannot be considered a utopia. This truth is especially apparent in Taiwan's international activity: being inappropriately overlooked and blockaded has created domestic pressure. Even without a pandemic, there has always been a lot of fighting among parties. Epidemic prevention only makes it more likely the fighting will worsen.
 
