* Prof. Shih-Chun Candice Lung

--- a/_i18n/en/_posts/2020-09-24-健康氣象e起來-熱傷害風險不再.md
+++ b/_i18n/en/_posts/2020-09-24-健康氣象e起來-熱傷害風險不再.md
@@ -11,15 +11,15 @@
 
 🌞 According to the Ministry of Health and Welfare (MOHW), the number of emergency room visits for heat-related illnesses such as heat stroke and heat cramps in August this year hit a three-year high, up nearly 40% from the same period last year. Improper management can even lead to organ failure with a mortality rate of over 30%.
 
-🌡️ Under extreme climates, heat illnesses have become a global health concern. Professor Long Shihjyun, a long-time researcher on this issue, analyzed data from the Central Weather Bureau and the National Health Insurance Research Database from 2000 to 2014, and pointed out in a journal paper published in 2019 that temperature alone is not an accurate indicator of heat illnesses. For better measures of the influence of heat, the wet-bulb globe temperature (WBGT), which takes temperature, humidity, solar radiation and wind speed, must be introduced.
+🌡️ Under extreme climates, heat illnesses have become a global health concern. Professor Shih-Chun Candice Lung, a long-time researcher on this issue, analyzed data from the Central Weather Bureau and the National Health Insurance Research Database from 2000 to 2014, and pointed out in a journal paper published in 2019 that temperature alone is not an accurate indicator of heat illnesses. For better measures of the influence of heat, the wet-bulb globe temperature (WBGT), which takes temperature, humidity, solar radiation and wind speed, must be introduced.
 
-📲 Earlier this year, Prof. Long, together with the Central Weather Bureau and the Health Promotion Administration, signed up for the "Presidential Hackathon" to develop Taiwan's first weather alert platform for healthcare, "Health Weather Tog-E-ther", which allows users to see their health risks by simply opening the "Tog-E-ther" app.
+📲 Earlier this year, Prof. Lung, together with the Central Weather Bureau and the Health Promotion Administration, signed up for the "Presidential Hackathon" to develop Taiwan's first weather alert platform for healthcare, "Health Weather Tog-E-ther", which allows users to see their health risks by simply opening the "Tog-E-ther" app.
 
 👴 For example, Mr. Lin, 65, works out every day, but he has high blood pressure and diabetes, which puts him at high risk for heat illnesses. All he has to do is to enter his health information into "Tog-E-ther", and the app will show notifications on his phone based on the weather conditions of the day, reminding him to avoid heat-related illnesses and outdoor exercises from 11 a.m. to 2 p.m.
 
-💡 This user-friendly design is the result of the team's brainstorming. Professor Long had never participated in hackathons before. During the discussions, she found that everyone saw themselves as 'users', actively exploring potential users' needs for innovative application of health and meteorological data. This is something that has rarely happened in the past in public sector policy discussions.
+💡 This user-friendly design is the result of the team's brainstorming. Professor Lung had never participated in hackathons before. During the discussions, she found that everyone saw themselves as 'users', actively exploring potential users' needs for innovative application of health and meteorological data. This is something that has rarely happened in the past in public sector policy discussions.
 
-🚸 During the brainstorming, Prof. Long also shared her research on heat illnesses in different groups of people, such as workers, farmers, and joggers, with the team. In this regard, the "Tog-E-ther" team believes that the only way to deepen prevention and treatment efforts is to push for regulatory improvement at the source.
+🚸 During the brainstorming, Prof. Lung also shared her research on heat illnesses in different groups of people, such as workers, farmers, and joggers, with the team. In this regard, the "Tog-E-ther" team believes that the only way to deepen prevention and treatment efforts is to push for regulatory improvement at the source.
 
 🔊 Therefore, within a month, the team discussed with the Occupational Safety and Health Administration of the Ministry of Labor, the National Fire Agency, the Construction and Planning Agency, and the Sports Administration of the Ministry of Education, and received enthusiastic responses — with numerous regulatory amendments such as the Occupational Safety and Health Education and Training Rules — breaking through the administrative barriers in the past. The Council of Agriculture also actively used apps such as "Field Helpers" and "Agriculture e-Grip" to tandem with the "Tog-E-ther" dataset and instantly broadcast it to tens of thousands of farmers.
 
